--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,11 @@
 @theme {
   --font-Poppins: Poppins, sans-serif;
 }
+
+input[type="time"]::-webkit-calendar-picker-indicator {
+  background: none !important;
+  width: 0;
+  height: 0;
+  border: none;
+  opacity: 0 !important;
+}
